k8s/apps/app1/app1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1
  namespace: sso-pilot
spec:
  selector:
    app: app1
  ports:
    - port: 8080
      targetPort: 8080
